--- a/index.html
+++ b/index.html
@@ -35,7 +35,50 @@
       </section>
     </header>
     <main>
-    
+        <!-- <section class="featured-flower">
+            <h3 class="section-title">Our Featured Flowers</h3>
+            <p class="intro-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <div class="featured-flower-container">
+                <div class="featured-flower-box">
+                    <img width="370px" src="images/pngwing 6.png" alt="">
+                </div>
+                <div class="featured-flower-box">
+                    <img width="370px" src="images/pngwing 5.png" alt="">
+                </div>
+                <div class="featured-flower-box">
+                    <img width="370px" src="images/pngwing 7.png" alt="">
+                </div>
+            </div>
+        </section> -->
+
+        <section class="benefit">
+            <div class="benefit-container">
+              <div class="benefit-item">
+                <img src="images/Group 57.png" alt="">
+                <p class="intro-desc">Same Day Delivery. Click & Collect.</p>
+              </div>
+              <div class="benefit-item">
+                <img src="images/Group 58.png" alt="">
+                <p class="intro-desc">Fresh Flowers. Local Growers.</p>
+              </div>
+              <div class="benefit-item">
+                <img src="images/Group 59.png" alt="">
+                <p class="intro-desc">24/7 Free Support.</p>
+              </div>
+            </div>
+        </section>
+        <section class="hot-deal">
+          <div class="deal-container">
+            <div class="deal-item">
+              <h2 class="deal-heading">Hot Deal ! Sale Up To 25% Off</h2>
+              <p class="intro-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+              <button class="btn-primary">Sign Up</button>
+            </div>
+            <div class="deal-img">
+              <img src="images/pngwing 8.png" alt="">
+            </div>
+          </div>
+        </section>
     </main>
     <footer></footer>
   </body>
