--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
             </div>
           </div>
         </section>
+        <section class="social">
+          <h2 class="section-title">Instagram</h2>
+          <p class="intro-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          <div class="social-showcase">
+            <img src="/images/Flower 01.png" alt="">
+            <img src="images/Rectangle 4.png" alt="">
+            <img src="images/Rectangle 5.png" alt="">
+            <img src="images/Rectangle 6.png" alt="">
+          </div>
+        </section>
+
     </main>
     <footer></footer>
   </body>
