latest deal added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </section>
     </header>
     <main>
-        <!-- <section class="featured-flower">
+      <!-- <section class="featured-flower">
             <h3 class="section-title">Our Featured Flowers</h3>
             <p class="intro-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
             <div class="featured-flower-container">
@@ -51,45 +51,59 @@
             </div>
         </section> -->
 
-        <section class="benefit">
-            <div class="benefit-container">
-              <div class="benefit-item">
-                <img src="images/Group 57.png" alt="">
-                <p class="intro-desc">Same Day Delivery. Click & Collect.</p>
-              </div>
-              <div class="benefit-item">
-                <img src="images/Group 58.png" alt="">
-                <p class="intro-desc">Fresh Flowers. Local Growers.</p>
-              </div>
-              <div class="benefit-item">
-                <img src="images/Group 59.png" alt="">
-                <p class="intro-desc">24/7 Free Support.</p>
-              </div>
-            </div>
-        </section>
-        <section class="hot-deal">
-          <div class="deal-container">
-            <div class="deal-item">
-              <h2 class="deal-heading">Hot Deal ! Sale Up To 25% Off</h2>
-              <p class="intro-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-              <button class="btn-primary">Sign Up</button>
-            </div>
-            <div class="deal-img">
-              <img src="images/pngwing 8.png" alt="">
-            </div>
+      <section class="benefit">
+        <div class="benefit-container">
+          <div class="benefit-item">
+            <img src="images/Group 57.png" alt="" />
+            <p class="intro-desc">Same Day Delivery. Click & Collect.</p>
           </div>
-        </section>
-        <section class="social">
-          <h2 class="section-title">Instagram</h2>
-          <p class="intro-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-          <div class="social-showcase">
-            <img src="/images/Flower 01.png" alt="">
-            <img src="images/Rectangle 4.png" alt="">
-            <img src="images/Rectangle 5.png" alt="">
-            <img src="images/Rectangle 6.png" alt="">
+          <div class="benefit-item">
+            <img src="images/Group 58.png" alt="" />
+            <p class="intro-desc">Fresh Flowers. Local Growers.</p>
           </div>
-        </section>
+          <div class="benefit-item">
+            <img src="images/Group 59.png" alt="" />
+            <p class="intro-desc">24/7 Free Support.</p>
+          </div>
+        </div>
+      </section>
+      <section class="hot-deal">
+        <div class="deal-container">
+          <div class="deal-item">
+            <h2 class="deal-heading">Hot Deal ! Sale Up To 25% Off</h2>
+            <p class="intro-desc">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+            <button class="btn-primary">Sign Up</button>
+          </div>
+          <div class="deal-img">
+            <img src="images/pngwing 8.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="social">
+        <h2 class="section-title">Instagram</h2>
+        <p class="intro-desc">
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout.
+        </p>
+        <div class="social-showcase">
+          <img src="/images/Flower 01.png" alt="" />
+          <img src="images/Rectangle 4.png" alt="" />
+          <img src="images/Rectangle 5.png" alt="" />
+          <img src="images/Rectangle 6.png" alt="" />
+        </div>
+      </section>
 
+      <section class="latest-deal">
+        <div class="latest-deal-item">
+          <h2 class="section-title">Get The Latest Deals</h2>
+          <p class="intro-desc">$30 coupon for first shopping</p>
+          <input class="input-field" type="email" name="" id="" placeholder="Enter your email here" />
+          <button class="btn-primary">Subscribe</button>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
