--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <section class="hot-deal">
         <div class="deal-container">
           <div class="deal-item">
-            <h2 class="deal-heading">Hot Deal ! Sale Up To 25% Off</h2>
+            <h2 class="deal-heading">Hot Deal ! Sale Up To 25% <span class="pink">Off</span></h2>
             <p class="intro-desc">
               It is a long established fact that a reader will be distracted by
               the readable content of a page when looking at its layout.
@@ -105,6 +105,10 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <h3 class="footer-title"><span class="pink">Flower</span>Shop</h3>
+      <p class="footer-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+      <p><small>&copy2020-2023, FlowerShop.com. All rights reserved. </small></p>
+    </footer>
   </body>
 </html>
