fixed featured section

--- a/index.html
+++ b/index.html
@@ -35,21 +35,28 @@
       </section>
     </header>
     <main>
-      <!-- <section class="featured-flower">
+      <section class="featured-flower">
             <h3 class="section-title">Our Featured Flowers</h3>
             <p class="intro-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
             <div class="featured-flower-container">
-                <div class="featured-flower-box">
-                    <img width="370px" src="images/pngwing 6.png" alt="">
+                <div class="featured-flower-box-1">
+                    <img class="featured-img" width="370px" src="images/pngwing 6.png" alt="">
                 </div>
-                <div class="featured-flower-box">
-                    <img width="370px" src="images/pngwing 5.png" alt="">
+                <div class="featured-flower-box-2">
+                    <img class="featured-img-2" width="370px" src="images/pngwing 5.png" alt="">
                 </div>
-                <div class="featured-flower-box">
-                    <img width="370px" src="images/pngwing 7.png" alt="">
+                <div class="featured-flower-box-3">
+                    <img class="featured-img" width="370px" src="images/pngwing 7.png" alt="">
                 </div>
             </div>
-        </section> -->
+            <div>
+              <ul class="featured-text">
+                <li>Pink Flower Tree</li>
+                <li>Pink Flower Tree</li>
+                <li>Pink Flower Tree</li>
+              </ul>
+            </div>
+        </section>
 
       <section class="benefit">
         <div class="benefit-container">
