--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   </head>
   <body>
     <header>
+
+    <!-- Intro Start -->
       <section class="intro">
         <div class="intro-details">
           <h1 class="intro-title">
@@ -33,8 +35,12 @@
           <img class="intro-img" src="images/pngwing 10.png" alt="" />
         </div>
       </section>
+      <!-- Intro Ended -->
+
     </header>
     <main>
+      <!-- Featured Flower Start -->
+
       <section class="featured-flower">
             <h3 class="section-title">Our Featured Flowers</h3>
             <p class="intro-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
@@ -58,6 +64,10 @@
             </div>
         </section>
 
+        <!-- Featured Flower Ended -->
+
+        <!-- Benefit Part Start -->
+
       <section class="benefit">
         <div class="benefit-container">
           <div class="benefit-item">
@@ -74,6 +84,11 @@
           </div>
         </div>
       </section>
+
+      <!-- Benefit Part Ended -->
+
+      <!-- Hot Deals Start -->
+
       <section class="hot-deal">
         <div class="deal-container">
           <div class="deal-item">
@@ -89,6 +104,11 @@
           </div>
         </div>
       </section>
+
+      <!-- Hot deals Ended -->
+
+      <!-- Social Part Start -->
+
       <section class="social">
         <h2 class="section-title">Instagram</h2>
         <p class="intro-desc">
@@ -103,6 +123,10 @@
         </div>
       </section>
 
+      <!-- Social Part Ended -->
+
+      <!-- Latest Deal Start -->
+
       <section class="latest-deal">
         <div class="latest-deal-item">
           <h2 class="section-title">Get The Latest Deals</h2>
@@ -112,10 +136,17 @@
         </div>
       </section>
     </main>
+
+    <!-- Latest Deal Ended -->
+
+    <!-- Footer Start -->
+
     <footer>
       <h3 class="footer-title"><span class="pink">Flower</span>Shop</h3>
       <p class="footer-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
       <p><small>&copy2020-2023, FlowerShop.com. All rights reserved. </small></p>
     </footer>
+
+    <!-- footer ended -->
   </body>
 </html>
